[package]
name = "boringdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4.0"
thiserror = "1.0.24"
parking_lot = "0.12.1"
redis-protocol = { version = "4.1.0", features = ["decode-mut"] }
log = "0.4.19"
env_logger = "0.10.0"
once_cell = "1.18.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
tempfile = "3.6.0"
rand = "0.8.5"